--- a/flaskapp/templates/index.html
+++ b/flaskapp/templates/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>Ethan Go's Data Dashboard</title>
+<title>Nintendo Sales Dashboard</title>
 
 <!--import script files needed from plotly and bootstrap-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -33,7 +33,7 @@
         <a class="nav-link" href="https://www.udacity.com">Udacity</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/EthanTGo">My Github</a>
+        <a class="nav-link" href="#">Other Link</a>
       </li>
     </ul>
   </div>
@@ -60,43 +60,10 @@
         <!--chart descriptions-->       
         <div id="middle-info" class="mt-3">
 
-            <h2 id="tag-line">Ethan Go's Data Dashboard</h2>
-            <h4 id="tag-line" class="text-muted">The following dashboard is my take on the project from Udacity</h4>
+            <h2 id="tag-line">Game Dashboard</h2>
+            <h4 id="tag-line" class="text-muted">Video Game Sales throughout the years</h4>
             
         </div>
-
-        <div class="dropdown">
-		  		
-            <button class="btn btn-danger btn-lg dropdown-toggle" type="button" 
-            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" 
-            aria-expanded="false">Filter by country</button>
-            
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="check-boxes">
-              <div class="form-check ml-3">
-                  <!-- Check the select-all box if all countries were submitted from the form -->
-                  {% if countries_selected|length == 10 %}
-                      <input class="form-check-input" type="checkbox" name="Select All" value="selectall" id="select-all-check" checked>
-                  {% else %}
-                      <input class="form-check-input" type="checkbox" name="Select All" value="selectall" id="select-all-check">
-                  {% endif %}
-                    <label class="form-check-label" for="select-all-check">Select All</label>
-              </div>
-              <form class="px-4 py-3" role="form" method="post" action="/" id="form-filter">
-                  {% for country in all_countries %}
-                      <div class="form-check">
-                          <!-- Check the country filter boxes for all countries submitted from the form -->
-                          {% if country[1] in countries_selected %}
-                                <input class="form-check-input country-check" type="checkbox" name="{{ country[0] }}" value="{{ country[1] }}" id="defaultCheck1-{{country[1]}}" checked>
-                          {% else %}
-                                <input class="form-check-input country-check" type="checkbox" name="{{ country[0] }}" value="{{ country[1] }}" id="defaultCheck1-{{country[1]}}">							
-                          {% endif %}
-                            <label class="form-check-label" for="defaultCheck1-{{country[1]}}">{{country[0]}}</label>
-                      </div>
-                  {% endfor %}
-                    <button id="country_selector" type="submit" class="btn btn-primary my-1">Submit</button>
-              </form>
-          </div>
-      </div>
         
         <!--charts-->       
         <div id="charts" class="container mt-3 text-center">
@@ -112,7 +79,7 @@
             </div>
 
             <!--bottom two charts-->        
-            <div class="row">
+            <div class="row mb-6">
                 <div class="col-6"> 
                     <div id="chart3">
                         <div id="{{ids[2]}}"></div>
@@ -124,15 +91,7 @@
                     </div>
                 <div>
             </div>
-
-            <!-- last chart-->
-            <div class="row">
-                <div class='col-12'>
-                    <div id="chart5">
-                        <div id="{{ids[4]}}"></div>
-                    </div>
-                </div>
-            </div>
+        
         </div>
     <div>
 </div>
@@ -146,35 +105,15 @@
 <footer>
 
     <script type="text/javascript">
-    	// plots the figure by id using Plotly
-    	// id much match the div id above in the html
-    	var figures = {{figuresJSON | safe}};
-		var ids = {{ids | safe}};
-		for(var i in figures) {
-			Plotly.plot(ids[i],
-				figures[i].data,
-				figures[i].layout || {});
-		};
-
-		// checks or unchecks the filter boxes based on the select all box
-        $("#select-all-check").change(function () {
-        	$("#check-boxes input:checkbox").prop('checked', $(this).prop('checked'));
-        });
-
-		// uncheck select-all box when unchecking another box
-		$("#form-filter").change(function () {
-			if (!$(this).prop('checked')) {
-				$("#select-all-check").prop('checked', false);
-			}
-		});
-
-		// check select-all box when re-checking all of the other boxes
-		$("#form-filter").change(function () {
-			if ($(".country-check:checked").length == $('.form-check').length - 1) {
-				$("#select-all-check").prop('checked', true);
-			}
-		});
-
+        // plots the figure with id
+        // id much match the div id above in the html
+        var figures = {{figuresJSON | safe}};
+        var ids = {{ids | safe}};
+        for(var i in figures) {
+            Plotly.plot(ids[i],
+                figures[i].data,
+                figures[i].layout || {});
+        }
     </script>
     
 </footer>
